--- a/static/css/loginsignup.css
+++ b/static/css/loginsignup.css
@@ -1,7 +1,7 @@
-.flexContainer{
+.loginWrapper{
     display:flex;
     flex-direction: row;
-    height: 100%;
+    min-height: 100vh;
     width: auto;
 }
 
