made manage page more asthetic and added weight column

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -10,3 +10,22 @@
     background-color: white;
     color: green;
 }
+
+#skip
+{
+position:absolute;
+left:-10000px;
+top:auto;
+width:1px;
+height:1px;
+overflow:hidden;
+}
+
+
+#skip:focus
+{
+position:static;
+width:auto;
+height:auto;
+margin-right: 5px;
+}
